; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ad5592r.c_ad5593r_gpio_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/dac/extr_ad5592r.c_ad5593r_gpio_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ad5592r_state = type { i32, i32 }

@AD5592R_REG_GPIO_IN_EN = common dso_local global i32 0, align 4
@AD5592R_GPIO_READBACK_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ad5592r_state*, i64*)* @ad5593r_gpio_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ad5593r_gpio_read(%struct.ad5592r_state* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ad5592r_state*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  store %struct.ad5592r_state* %0, %struct.ad5592r_state** %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load %struct.ad5592r_state*, %struct.ad5592r_state** %4, align 8
  %8 = load i32, i32* @AD5592R_REG_GPIO_IN_EN, align 4
  %9 = load i32, i32* @AD5592R_GPIO_READBACK_EN, align 4
  %10 = load %struct.ad5592r_state*, %struct.ad5592r_state** %4, align 8
  %11 = getelementptr inbounds %struct.ad5592r_state, %struct.ad5592r_state* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = or i32 %9, %12
  %14 = call i32 @ad5592r_reg_write(%struct.ad5592r_state* %7, i32 %8, i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i32, i32* %6, align 4
  store i32 %18, i32* %3, align 4
  br label %34

19:                                               ; preds = %2
  %20 = load %struct.ad5592r_state*, %struct.ad5592r_state** %4, align 8
  %21 = load %struct.ad5592r_state*, %struct.ad5592r_state** %4, align 8
  %22 = getelementptr inbounds %struct.ad5592r_state, %struct.ad5592r_state* %21, i32 0, i32 1
  %23 = call i32 @ad5592r_spi_wnop_r16(%struct.ad5592r_state* %20, i32* %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %19
  %27 = load i32, i32* %6, align 4
  store i32 %27, i32* %3, align 4
  br label %34

28:                                               ; preds = %19
  %29 = load %struct.ad5592r_state*, %struct.ad5592r_state** %4, align 8
  %30 = getelementptr inbounds %struct.ad5592r_state, %struct.ad5592r_state* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = call i64 @be16_to_cpu(i32 %31)
  %33 = load i64*, i64** %5, align 8
  store i64 %32, i64* %33, align 8
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %28, %26, %17
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @ad5592r_reg_write(%struct.ad5592r_state*, i32, i32) #1

declare dso_local i32 @ad5592r_spi_wnop_r16(%struct.ad5592r_state*, i32*) #1

declare dso_local i64 @be16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
